<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragTab2">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#8BC34A"
            android:minHeight="50dp">

            <TextView
                android:id="@+id/textView1"
                style="@style/Widget.AppCompat.TextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/textview1"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/textView2"
                style="@style/Widget.AppCompat.TextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/textview2"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/textView3"
                style="@style/Widget.AppCompat.TextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/textview3"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/textView4"
                style="@style/Widget.AppCompat.TextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/textview4"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />
        </TableRow>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </TableLayout>


</FrameLayout>